--- a/Bloque12-Kafka/block12-kafka-producer/demo/src/main/resources/application.properties
+++ b/Bloque12-Kafka/block12-kafka-producer/demo/src/main/resources/application.properties
@@ -11,9 +11,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.mvc.format.date=yyyy-MM-dd
 
-
-
-
+#CONSUMER
 spring.kafka.consumer.bootstrap-servers= http://localhost:9092
 spring.kafka.consumer.group-id= myGroup
 spring.kafka.consumer.auto-offset-reset= earliest
@@ -22,6 +20,7 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
+#PRODUCER
 spring.kafka.producer.bootstrap-servers= http://localhost:9092
 spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
 #spring.kafka.producer.value-serializer= org.apache.kafka.common.serialization.StringSerializer
